# moirai

./: .env.example  .gitignore  CLAUDE.md  README.md
bot/: Dockerfile  README.md  pyproject.toml
bot/moirai_bot/: __init__.py  __main__.py  clock.py  config.py  handlers.py  inbox.py  poller.py  reminder.py  state.py
bot/moirai_bot/storage/: drive.py  today_tasks.py
bot/src/: main.py
bot/tests/: test_handlers.py  test_inbox.py  test_reminder.py  test_state.py  test_today_tasks.py
docs/: ARCHITECTURE.md  DATA_FORMATS.md  ROADMAP.md
docs/prompts/: daily_plan.md  priorities.md  schedule_refresh.md  weekly_review.md
infra/: Caddyfile  docker-compose.yml  xray-config.example.json
infra/systemd/: planner-bot.service
