[project]
name = "moirai-bot"
version = "0.1.0"
description = "Telegram bot for Moirai planner"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13",
    "google-api-python-client>=2.140",
    "google-auth>=2.34",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "ASYNC"]
